# labtrust-portfolio

./: .gitignore  PORTFOLIO_BOARD.md  README.md  REPRO_RUN.md  sha256sums.txt
datasets/: README.md  p6_adaptive_suite.json  p6_benign_suite.json
docs/: AIES_2026_ASSURANCE_SPRINT.md  AIES_2026_ENGINEERING_DELIVERY.md  CONDITIONAL_TRIGGERS.md  CORPUS_EXPANSION.md  CROSS_CUTTING_DONE.md  DRAFT_CONVERSION_CHECKLIST.md  EVALS_RUNBOOK.md  EVAL_RESULTS_INTERPRETATION.md  EXPERIMENTS_AND_LIMITATIONS.md  INTEGRATION_CONTRACTS.md  P0_CONFORMANCE_SUMMARY_SPEC.md  P0_E4_COORDINATION_SHOCK_NOTE.md  P0_E4_METHOD_NOTE.md  P1_TRACE_DERIVABILITY.md  P2_REAL_SENSITIVITY_SHARING_PROTOCOL.md  P3_REAL_TRACE_INGESTION.md  P5_BASELINE_DISCIPLINE.md  P5_COORDINATION_TAX_PROXY.md  P5_P4_BOUNDARY.md  P5_SCALING_SPEC.md  P6_OWASP_MAPPING.md  (+26 more)
impl/: pyproject.toml
impl/src/labtrust_portfolio/: assurance_failure_codes.py  assurance_negative_controls.py  assurance_review_pipeline.py  cli.py  conformance.py  contract_store.py  contracts.py  coordination_profile.py  evidence.py  gatekeeper.py  hashing.py  instrument_state_machine.py  llm_planning.py  maestro.py  maestro_scoring.py  meta_controller.py  p0_e4_matrix.py  p6_prompt_variants.py  profile.py  release.py  rep_cps.py  replay.py  reproducibility.py  scaling.py  scenario.py  schema.py  stats.py  thinslice.py  trace.py
impl/src/labtrust_portfolio/adapters/: __init__.py  base.py  blackboard.py  centralized.py  conservative_safe_shutdown.py  llm_planning_adapter.py  meta_adapter.py  no_recovery.py  rep_cps_adapter.py  retry_heavy.py
(+11073 files in other folders)
